datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

enum TaskStatus {
  NOT_DONE
  IN_PROGRESS
  DONE
}

model User {
  id       Int     @id @default(autoincrement())
  login    String  @unique
  password String
  boards   Board[]
}


model Board {
  id     Int    @id @default(autoincrement())
  title  String
  tasks  Task[]
  user   User   @relation(fields: [userId], references: [id])
  userId Int
}

model Task {
  id      Int        @id @default(autoincrement())
  title   String
  board   Board      @relation(fields: [boardId], references: [id])
  boardId Int
  status  TaskStatus @default(NOT_DONE)
}
